<resources>
    <string name="app_name">Tasker Plugin for Smartspacer</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="configuration_preview_permission_title">Preview Permission Required</string>
    <string name="configuration_preview_permission_content">Tap to grant</string>
    <string name="target_label">Tasker</string>
    <string name="target_description_unset">Dynamically updated Tasker Target, with infinite possibilities</string>
    <string name="target_description">Target \"%1s\", which can be updated from Tasker</string>
    <string name="target_setup_name_title">Name</string>
    <string name="target_setup_name_content">Set a name for this Target, this is only used in the Tasker configuration, and does not impact the Target itself</string>
    <string name="target_setup_name_error">Please set a name</string>
    <string name="target_setup_name_id_title">Smartspacer ID</string>
    <string name="target_setup_header">This is just the Target setup. To set the content of the Target, use the Tasker Plugin for Smartspacer options in Tasker</string>
    <string name="target_setup_label">Settings</string>
    <string name="target_setup_description">Set a label for this Target</string>
    <string name="target_incompatible">This Target requires Tasker or Automate, get them from the Play Store</string>
    <string name="complication_label">Tasker</string>
    <string name="complication_description_unset">Dynamically updated Tasker Complication, with infinite possibilities</string>
    <string name="complication_description">Complication \"%1s\", which can be updated from Tasker</string>
    <string name="complication_setup_name_title">Name</string>
    <string name="complication_setup_name_content">Set a name for this Complication, this is only used in the Tasker configuration, and does not impact the Complication itself</string>
    <string name="complication_setup_name_error">Please set a name</string>
    <string name="complication_setup_name_id_title">Smartspacer ID</string>
    <string name="complication_setup_header">This is just the Complication setup. To set the content of the Complication, use the Tasker Plugin for Smartspacer options in Tasker</string>
    <string name="complication_setup_label">Settings</string>
    <string name="complication_setup_description">Set a label for this Complication</string>
    <string name="complication_incompatible">This Complication requires Tasker or Automate, get them from the Play Store</string>
    <string name="requirement_label">Tasker</string>
    <string name="requirement_description_unset">Dynamically set requirement from Tasker, with infinite possibilities</string>
    <string name="requirement_description">Requirement \"%1s\", which can be set from Tasker</string>
    <string name="requirement_setup_name_title">Name</string>
    <string name="requirement_setup_name_content">Set a name for this Requirement, this is only used in the Tasker configuration, and does not impact the Requirement itself</string>
    <string name="requirement_setup_name_error">Please set a name</string>
    <string name="requirement_setup_name_id_title">Smartspacer ID</string>
    <string name="requirement_setup_header">This is just the Requirement setup. To set whether the Requirement is met, use the Tasker Plugin for Smartspacer options in Tasker</string>
    <string name="requirement_setup_label">Settings</string>
    <string name="requirement_setup_description">Set a label for this Requirement</string>
    <string name="configuration_text_text_title">Text</string>
    <string name="configuration_text_text_content">Partial Markdown (bold, italic, strikethrough) and HTML (bold, italic, underline, strikethrough and colour) supported (not available in OEM Smartspace)\n\nTasker variables are supported using <b>%variable</b> replacements.</string>
    <string name="configuration_text_truncate_at_title">Truncate At</string>
    <string name="configuration_text_truncate_at_content">Where to truncate the text if the content is too long: %1s</string>
    <string name="configuration_icon_none_title">None</string>
    <string name="configuration_icon_none_content">No icon, this may not look right on some setups</string>
    <string name="configuration_icon_from_font_title">Built In</string>
    <string name="configuration_icon_from_font_content">Choose from thousands of built in icons</string>
    <string name="configuration_icon_from_file_title">From File</string>
    <string name="configuration_icon_from_file_content">Use an image from file</string>
    <string name="configuration_icon_from_url_title">From URL</string>
    <string name="configuration_icon_from_url_content">Load an image from the web</string>
    <string name="configuration_icon_font_picker_content">%1d icons</string>
    <string name="configuration_icon_font_icon_picker_title">Icons</string>
    <string name="configuration_icon_font_description">%1s (%1s)</string>
    <string name="configuration_icon_font_description_error">Icon not found</string>
    <string name="configuration_icon_file_pick_title">Select File</string>
    <string name="configuration_icon_tint_title">Tint</string>
    <string name="configuration_icon_tint_content">Apply an automatic tint to this image, making it always visible in Smartspacer. This will break solid icons which are not of a distinct shape.</string>
    <string name="configuration_icon_description">Image: %1s</string>
    <string name="configuration_icon_description_error">Image from file</string>
    <string name="configuration_icon_description_default">Example image</string>
    <string name="configuration_icon_url_title">URL</string>
    <string name="configuration_icon_url_content">Enter a web URL of an image. Tasker variables are supported using <b>%variable</b> replacements.</string>
    <string name="configuration_icon_url_description">URL: %1s</string>
    <string name="configuration_icon_url_authentication_title">Authentication</string>
    <string name="configuration_icon_url_authentication_description">Enter an Authorization header, in the format passed directly in a request header. For example, <b>Basic YTpi</b>. Tasker variables are supported using <b>%variable</b> replacements.</string>
    <string name="configuration_icon_url_authentication_content"><b>Optional:</b> Provide an Authorization header for this image, which will be sent as part of the request to load the image</string>
    <string name="action_target_update_label">Update Target</string>
    <string name="action_target_update_label_short">Update Target</string>
    <string name="action_target_update_blurb">Update \"%1s\" with new Target configuration</string>
    <string name="action_complication_update_label">Update Complication</string>
    <string name="action_complication_update_label_short">Update Complication</string>
    <string name="action_complication_update_blurb">Update \"%1s\" with new Complication configuration</string>
    <string name="action_target_set_visibility_label">Target Visibility</string>
    <string name="action_target_set_visibility_label_short">Set Visibility</string>
    <string name="action_target_set_visibility_blurb_visible">Set \"%1s\" to visible</string>
    <string name="action_target_set_visibility_blurb_invisible">Set \"%1s\" to invisible</string>
    <string name="action_complication_set_visibility_label">Complication Visibility</string>
    <string name="action_complication_set_visibility_label_short">Set Visibility</string>
    <string name="action_complication_set_visibility_blurb_visible">Set \"%1s\" to visible</string>
    <string name="action_complication_set_visibility_blurb_invisible">Set \"%1s\" to invisible</string>
    <string name="action_requirement_set_label">Update Requirement</string>
    <string name="action_requirement_set_label_short">Set Requirement</string>
    <string name="action_requirement_set_blurb_met">Set \"%1s\" to met</string>
    <string name="action_requirement_set_blurb_unmet">Set \"%1s\" to unmet</string>
    <string name="target_initial_title">Tasker Target</string>
    <string name="target_initial_content">@string/app_name</string>
    <string name="complication_initial_content">Tasker Complication</string>
    <string name="configuration_target_select_target_title">Target to Update</string>
    <string name="configuration_target_select_target_title_short">Target</string>
    <string name="configuration_target_select_target_content">Select a Target to update</string>
    <string name="configuration_target_select_empty">No Targets have been set up. Add a Tasker Target in Smartspacer before configuring.</string>
    <string name="configuration_target_select_subtitle">Smartspacer ID: %1s</string>
    <string name="configuration_complication_select_complication_title">Complication to Update</string>
    <string name="configuration_complication_select_complication_title_short">Complication</string>
    <string name="configuration_complication_select_complication_content">Select a Complication to update</string>
    <string name="configuration_complication_select_empty">No Complications have been set up. Add a Tasker Complication in Smartspacer before configuring.</string>
    <string name="configuration_complication_select_subtitle">Smartspacer ID: %1s</string>
    <string name="configuration_requirement_select_requirement_title">Requirement to Update</string>
    <string name="configuration_requirement_select_requirement_title_short">Requirement</string>
    <string name="configuration_requirement_select_requirement_content">Select a Requirement to update</string>
    <string name="configuration_requirement_select_empty">No Requirements have been set up. Add a Tasker Requirement in Smartspacer before configuring.</string>
    <string name="configuration_requirement_select_subtitle">Smartspacer ID: %1s</string>
    <string name="configuration_target_basic_title">Basic</string>
    <string name="configuration_target_basic_content">Regular Target with title, subtitle, icon and optional sub-Complication</string>
    <string name="configuration_target_basic_sub_complication_header">Sub-complication</string>
    <string name="configuration_target_basic_sub_complication_title">Enable Sub-complication</string>
    <string name="configuration_target_basic_sub_complication_content">Attach a Complication to this Target to show next to it</string>
    <string name="configuration_target_basic_sub_complication_extras_header">Sub-complication Extras</string>
    <string name="configuration_target_hidden">This Target is currently hidden and will not be shown in Smartspace. Use the \"Set Target Visibility\" action to make it visible.</string>
    <string name="configuration_complication_hidden">This Complication is currently hidden and will not be shown in Smartspace. Use the \"Set Complication Visibility\" action to make it visible.</string>
    <string name="configuration_target_header">Target</string>
    <string name="configuration_target_template_title">Template</string>
    <string name="configuration_target_title_title">Title</string>
    <string name="configuration_target_subtitle_title">Subtitle</string>
    <string name="configuration_target_expanded_state_title_short">Expanded</string>
    <string name="configuration_target_expanded_widget_title">Widget</string>
    <string name="configuration_target_expanded_shortcuts_title">Shortcuts</string>
    <string name="configuration_target_expanded_app_shortcuts_title">App Shortcuts</string>
    <string name="configuration_target_expanded_shortcuts_shortcut_title">Shortcut</string>
    <string name="configuration_target_list_items_title">List Items</string>
    <string name="configuration_doorbell_state_title">State</string>
    <string name="configuration_doorbell_images_title">Images</string>
    <string name="configuration_carousel_items">Items</string>
</resources>