<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_include_icon"
    app:startDestination="@id/iconPickerFragment">

    <fragment
        android:id="@+id/iconPickerFragment"
        android:name="com.kieronquinn.app.smartspacer.plugin.tasker.ui.screens.icon.IconPickerFragment"
        android:label=" "
        tools:layout="@layout/fragment_settings_base" >
        <argument
            android:name="config"
            app:argType="com.kieronquinn.app.smartspacer.plugin.tasker.ui.screens.icon.IconPickerFragment$Config" />
        <action
            android:id="@+id/action_iconPickerFragment_to_fontPickerFragment"
            app:destination="@id/fontPickerFragment" />
        <action
            android:id="@+id/action_iconPickerFragment_to_filePickerFragment"
            app:destination="@id/filePickerFragment" />
        <action
            android:id="@+id/action_iconPickerFragment_to_urlPickerFragment"
            app:destination="@id/urlPickerFragment" />
    </fragment>
    <fragment
        android:id="@+id/fontPickerFragment"
        android:name="com.kieronquinn.app.smartspacer.plugin.tasker.ui.screens.icon.font.FontPickerFragment"
        android:label="@string/configuration_icon_from_font_title"
        tools:layout="@layout/fragment_settings_base">
        <action
            android:id="@+id/action_fontPickerFragment_to_fontIconPickerFragment"
            app:destination="@id/fontIconPickerFragment" />
        <argument
            android:name="key"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/fontIconPickerFragment"
        android:name="com.kieronquinn.app.smartspacer.plugin.tasker.ui.screens.icon.font.picker.FontIconPickerFragment"
        android:label="@string/configuration_icon_font_icon_picker_title"
        tools:layout="@layout/fragment_settings_search">
        <argument
            android:name="config"
            app:argType="com.kieronquinn.app.smartspacer.plugin.tasker.ui.screens.icon.font.picker.FontIconPickerFragment$Config" />
    </fragment>
    <fragment
        android:id="@+id/filePickerFragment"
        android:name="com.kieronquinn.app.smartspacer.plugin.tasker.ui.screens.icon.file.FilePickerFragment"
        android:label="@string/configuration_icon_from_file_title"
        tools:layout="@layout/fragment_settings_fab" >
        <argument
            android:name="config"
            app:argType="com.kieronquinn.app.smartspacer.plugin.tasker.ui.screens.icon.file.FilePickerFragment$Config" />
    </fragment>
    <fragment
        android:id="@+id/urlPickerFragment"
        android:name="com.kieronquinn.app.smartspacer.plugin.tasker.ui.screens.icon.url.UrlPickerFragment"
        android:label="@string/configuration_icon_from_url_title"
        tools:layout="@layout/fragment_settings_fab">
        <argument
            android:name="config"
            app:argType="com.kieronquinn.app.smartspacer.plugin.tasker.ui.screens.icon.url.UrlPickerFragment$Config" />
    </fragment>
    <include app:graph="@navigation/nav_graph_include_string" />
    <action
        android:id="@+id/action_global_nav_graph_include_string2"
        app:destination="@id/nav_graph_include_string">
        <argument
            android:name="config"
            app:argType="com.kieronquinn.app.smartspacer.plugin.tasker.ui.screens.string.StringInputFragment$Config" />
    </action>

</navigation>